syntax = "proto3";
package pb;
import "models/comment.proto";
option go_package = "github.com/zizdlp/zbook/pb/rpcs";

// 1.CreateComment
message CreateCommentRequest {
  int64 markdown_id      = 1;
  int64 parent_id        = 2;
  string comment_content = 3;
}

message CreateCommentResponse {
  CommentBasicInfo comment = 1;
}

// 2.DeleteComment
message DeleteCommentRequest {
  int64 comment_id = 1;
}
message DeleteCommentResponse {}

// 3.ListCommentLevelOne
message ListCommentLevelOneRequest {
  int64 markdown_id = 1;
  int32 page_id     = 2;
  int32 page_size   = 3;
}

// 4.ListCommentLevelTwo
message ListCommentLevelTwoRequest {
  int64 root_id   = 1;
  int32 page_id   = 2;
  int32 page_size = 3;
}

message ListCommentLevelResponse {
  repeated ListCommentInfo comments = 1;
}

// 5.GetCommentCountInfo
message GetCommentCountInfoRequest {
  int64 comment_id = 1;
}
message GetCommentCountInfoResponse {
  CommentCountInfo comment_count_info = 1;
}

// 3.GetListCommentLevelOneCount
message GetListCommentLevelOneCountRequest {
  int64 markdown_id = 1;
}

// 4.GetListCommentLevelTwoCount
message GetListCommentLevelTwoCountRequest {
  int64 root_id = 1;
}

message GetListCommentLevelCountResponse {
  int64 count = 1;
}
